Configured for tulga.uz domain

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,10 @@
 <body>
     <header class="site-header">
         <div class="container">
-            <h1 class="site-title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+            <h1 class="site-title"><a href="/">{{ site.title }}</a></h1>
             <nav class="site-nav">
-                <a href="{{ site.baseurl }}/">Bas bet</a>
-                <a href="{{ site.baseurl }}/authors/">Tulǵalar</a>
+                <a href="/">Bas bet</a>
+                <a href="/authors/">Tulǵalar</a>
             </nav>
         </div>
     </header>
@@ -30,6 +30,6 @@
         </div>
     </footer>
 
-    <script src="{{ site.baseurl }}/assets/js/search.js"></script>
+    <script src="/assets/js/search.js"></script>
 </body>
 </html>
