--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -24,6 +24,6 @@ layout: default
     </div>
 
     <footer class="work-footer">
-        <a href="{{ site.baseurl }}/authors/" class="back-link">← Tulǵalar dizimine qaytıw</a>
+        <a href="/authors/" class="back-link">← Tulǵalar dizimine qaytıw</a>
     </footer>
 </article>
